Composant Collapse : correction animation à l'ouverture

--- a/src/components/collapse/index.css
+++ b/src/components/collapse/index.css
@@ -49,7 +49,7 @@
 
 @keyframes ulEffect {
 	0% {
-		margin-top: -100px;
+		margin-top: -30px;
 		opacity: 0;
 	}
 	
